# StraubEngine

./: .gitignore  CMakeLists.txt  README.md  settings.cfg
res/dialogue/: dialogue.json
src/: main.cpp
src/Dialogue/: Dialogue.h  DialogueBox.cpp  DialogueBox.h  DialogueParser.cpp  DialogueParser.h  ReadSpeed.h
src/Engine/: FileIO.cpp  FileIO.h  Game.cpp  Game.h  Settings.cpp  Settings.h  Timer.cpp  Timer.h
src/Engine/Audio/: Audio.cpp  Audio.h  AudioPool.h  AudioSound.h
src/Engine/RandomUtilities/: RDSNullValue.cpp  RDSNullValue.h  RDSObject.cpp  RDSObject.h  RDSTable.cpp  RDSTable.h  RandomGen.h
src/Engine/StandardTypes/: CircleUtils.h  RectUtils.h  VecUtils.h  circle.h  rect2.h  rect3.h  vec2.h  vec2f.h  vec3.h
src/Entities/: Entity.cpp
src/Entity/: Entity.h
src/Entity/Components/Generic/: ScriptComponent.h  StateComponent.h
src/Entity/Components/Input/: InputComponent.h
src/Entity/Components/Physics/: CollisionComponent.h  DirectionComponent.h  PhysicsComponent.h  RigidBodyComponent.h  TransformComponent.h
src/Entity/Components/Render/: AnimationComponent.h  HueComponent.h  LightComponent.h  ParticleComponent.h  RenderComponent.h  SpritesheetPropertiesComponent.cpp  SpritesheetPropertiesComponent.h
src/Entity/Components/Specialized/: PlayerComponent.h
src/Entity/Components/Trigger/: CameraTargetTriggerComponent.h  DialogueTriggerComponent.h  LevelLoadTriggerComponent.h  PrefabSpawnTriggerComponent.h  TriggerComponent.h
src/Entity/Core/: ComponentArray.h  ComponentManager.h  EntityComponentSystem.h  EntityConstants.h  EntityManager.cpp  EntityManager.h  EntityRegistry.h  IComponentArray.h  System.h  SystemManager.h
src/Entity/Prefabs/: PrefabType.h
src/Entity/Prefabs/Triggers/: CameraTargetTrigger.cpp  CameraTargetTrigger.h  DialogueTrigger.cpp  DialogueTrigger.h  LevelLoadTrigger.cpp  LevelLoadTrigger.h  PrefabSpawnTrigger.cpp  PrefabSpawnTrigger.h
src/Entity/Systems/: InputSystem.cpp  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  ScriptSystem.cpp
src/Entity/Systems/Generic/: ScriptSystem.cpp  ScriptSystem.h
src/Entity/Systems/Input/: InputSystem.cpp  InputSystem.h
src/Entity/Systems/Physics/: CollisionSystem.cpp  CollisionSystem.h  PhysicsSystem.cpp  PhysicsSystem.h
src/Entity/Systems/Render/: CameraSystem.cpp  CameraSystem.h  LightSystem.cpp  LightSystem.h  RenderSystem.cpp  RenderSystem.h
src/GUI/: BlankElement.h  Button.cpp  Button.h  GUI.cpp  GUI.h  GUIElement.cpp  GUIElement.h  Icon.cpp  Icon.h  NullElement.h  TextContainer.cpp  TextContainer.h
src/Input/: Controller.cpp  Controller.h  InputEvent.h  Keyboard.h  Mouse.cpp  Mouse.h  Settings.cpp  Settings.h
src/Level/: CollisionMap.cpp  CollisionMap.h  FloatingPointLightMap.cpp  FloatingPointLightMap.h  Level.cpp  Level.h  LevelParser.cpp  LevelParser.h  LightMap.cpp  LightMap.h  RenderPlane.cpp  RenderPlane.h  Tile.h  Tilemap.cpp  Tilemap.h
src/Level/Lighting/: FloatingPointLightMap.cpp  FloatingPointLightMap.h  Hue.h  Light.h
src/Localization/: StringID.h
src/Network/: Client.cpp  Client.h  DeliveryType.h  Message.cpp  Message.h  Server.cpp  Server.h
src/Render/: DialogueBox.cpp  DialogueBox.h  Spritesheet.cpp  Spritesheet.h  SpritesheetID.h  SpritesheetProperties.h  SpritesheetRegistry.h  Text.cpp  Text.h
src/Render/Effects/: ScreenFade.cpp  ScreenFade.h  ScreenShake.cpp  ScreenShake.h
src/States/: GameState.cpp  GameState.h  State.cpp  State.h
